Data Leakage tutorial and exercises completed. Intermediate ML course completed

--- a/MahendraBishnoi/06_Intermediate_ML.ipynb
+++ b/MahendraBishnoi/06_Intermediate_ML.ipynb
@@ -622,7 +622,9 @@
     {
      "data": {
       "text/plain": [
-       "['home-data-for-ml-course', 'melbourne-housing-snapshot']"
+       "['home-data-for-ml-course',\n",
+       " 'melbourne-housing-snapshot',\n",
+       " 'aer-credit-card-data']"
       ]
      },
      "execution_count": 14,
@@ -1704,18 +1706,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[08:03:09] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.6/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
       "  if getattr(data, 'base', None) is not None and \\\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[06:56:59] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -1752,7 +1754,7 @@
     {
      "data": {
       "text/plain": [
-       "264013.8383238218"
+       "270887.46398195875"
       ]
      },
      "execution_count": 37,
@@ -1796,7 +1798,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[06:57:00] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[08:03:09] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -1839,7 +1841,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[06:57:02] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[08:03:11] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -1889,7 +1891,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[06:57:03] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[08:03:12] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -1938,7 +1940,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[06:57:04] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[08:03:12] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     },
     {
@@ -1976,11 +1978,332 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data Leakage\n",
+    "**Data leakage** (or **leakage**) happens when your training data contains information about the target, but similar data will not be available when the model is used for prediction. This leads to high performance on the training set (and possibly even the validation data), but the model will perform poorly in production.\n",
+    "\n",
+    "In other words, leakage causes a model to look accurate until you start making decisions with the model, and then the model becomes very inaccurate.\n",
+    "\n",
+    "There are two main types of leakage: **target leakage** and **train-test contamination**.\n",
+    "\n",
+    "**Target Leakage**: Occurs when our predictors include data that will not be available at the time you make predictions. It is important to think about target leakage in terms of the timing or chronological order that data becomes available, not merely whether a feature helps make good predictions.\n",
+    "\n",
+    "Imagine we want to predict who will get sick with pneumonia. The top few rows of our raw data look like this:\n",
+    "<img src=\"https://imgur.com/BEf5da3.png\"/>\n",
+    "\n",
+    "People take antibiotic medicines after getting pneumonia in order to recover. The raw data shows a strong relationship between those columns, but `took_antibiotic_medicine` is frequently changed after the value for `got_pneumonia` is determined. This is target leakage.\n",
+    "\n",
+    "The model would see that anyone who has a value of False for `took_antibiotic_medicine` didn't have pneumonia. Since validation data comes from the same source as training data, the pattern will repeat itself in validation, and the model will have great validation (or cross-validation) scores.\n",
+    "\n",
+    "But the model will be very inaccurate when subsequently deployed in the real world, because even patients who will get pneumonia won't have received antibiotics yet when we need to make predictions about their future health.\n",
+    "\n",
+    "To prevent this type of data leakage, any variable updated (or created) after the target value is realized should be excluded.\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/y7hfTYe.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Train-Test Contamination**\n",
+    "\n",
+    "A different type of leak occurs when we aren't careful to distinguish training data from validation data.\n",
+    "\n",
+    "Recall that validation is meant to be a measure of how the model does on data that it hasn't considered before. We can corrupt this process in subtle ways if the validation data affects the preprocessing behavior. This is sometimes called train-test contamination.\n",
+    "\n",
+    "For example, imagine we run preprocessing (like fitting an imputer for missing values) before calling `train_test_split()`. The end result? Our model may get good validation scores, giving us great confidence in it, but perform poorly when we deploy it to make decisions.\n",
+    "\n",
+    "After all, we incorporated data from the validation or test data into how you make predictions, so the may do well on that particular data even if it can't generalize to new data. This problem becomes even more subtle (and more dangerous) when we do more complex feature engineering.\n",
+    "\n",
+    "If our validation is based on a simple train-test split, exclude the validation data from any type of fitting, including the fitting of preprocessing steps. This is easier if we use scikit-learn pipelines. When using cross-validation, it's even more critical that you do your preprocessing inside the pipeline!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows in the dataset: 1319\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reports</th>\n",
+       "      <th>age</th>\n",
+       "      <th>income</th>\n",
+       "      <th>share</th>\n",
+       "      <th>expenditure</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>selfemp</th>\n",
+       "      <th>dependents</th>\n",
+       "      <th>months</th>\n",
+       "      <th>majorcards</th>\n",
+       "      <th>active</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>37.66667</td>\n",
+       "      <td>4.5200</td>\n",
+       "      <td>0.033270</td>\n",
+       "      <td>124.983300</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>33.25000</td>\n",
+       "      <td>2.4200</td>\n",
+       "      <td>0.005217</td>\n",
+       "      <td>9.854167</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>33.66667</td>\n",
+       "      <td>4.5000</td>\n",
+       "      <td>0.004156</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>30.50000</td>\n",
+       "      <td>2.5400</td>\n",
+       "      <td>0.065214</td>\n",
+       "      <td>137.869200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>32.16667</td>\n",
+       "      <td>9.7867</td>\n",
+       "      <td>0.067051</td>\n",
+       "      <td>546.503300</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   reports       age  income     share  expenditure  owner  selfemp  \\\n",
+       "0        0  37.66667  4.5200  0.033270   124.983300   True    False   \n",
+       "1        0  33.25000  2.4200  0.005217     9.854167  False    False   \n",
+       "2        0  33.66667  4.5000  0.004156    15.000000   True    False   \n",
+       "3        0  30.50000  2.5400  0.065214   137.869200  False    False   \n",
+       "4        0  32.16667  9.7867  0.067051   546.503300   True    False   \n",
+       "\n",
+       "   dependents  months  majorcards  active  \n",
+       "0           3      54           1      12  \n",
+       "1           3      34           1      13  \n",
+       "2           4      58           1       5  \n",
+       "3           0      25           1       7  \n",
+       "4           2      64           1       5  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the data\n",
+    "data = pd.read_csv('../input/aer-credit-card-data/AER_credit_card_data.csv', \n",
+    "                   true_values = ['yes'], false_values = ['no'])\n",
+    "\n",
+    "# Select target\n",
+    "y = data.card\n",
+    "\n",
+    "# Select predictors\n",
+    "X = data.drop(['card'], axis=1)\n",
+    "\n",
+    "print(\"Number of rows in the dataset:\", X.shape[0])\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation accuracy: 0.979531\n"
+     ]
+    }
+   ],
+   "source": [
+    "# small dataset so we will use cross validation\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "my_pipeline = make_pipeline(RandomForestClassifier(n_estimators=100))\n",
+    "scores = cross_val_score(my_pipeline, X, y,\n",
+    "                        cv=5,\n",
+    "                        scoring='accuracy')\n",
+    "\n",
+    "print(\"Cross-validation accuracy: %f\" % scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "98% accuracy doesn't happen often so enquire for target leakage.\n",
+    "\n",
+    "Here is a summary of the data:\n",
+    "\n",
+    "- **card**: 1 if credit card application accepted, 0 if not\n",
+    "- **reports**: Number of major derogatory reports\n",
+    "- **age**: Age n years plus twelfths of a year\n",
+    "- **income**: Yearly income (divided by 10,000)\n",
+    "- **share**: Ratio of monthly credit card expenditure to yearly income\n",
+    "- **expenditure**: Average monthly credit card expenditure\n",
+    "- **owner**: 1 if owns home, 0 if rents\n",
+    "- **selfempl**: 1 if self-employed, 0 if not\n",
+    "- **dependents**: 1 + number of dependents\n",
+    "- **months**: Months living at current address\n",
+    "- **majorcards**: Number of major credit cards held\n",
+    "- **active**: Number of active credit accounts\n",
+    "\n",
+    "A few variables look suspicious. For example, does `expenditure` mean expenditure on this card or on cards used before appying?\n",
+    "\n",
+    "Here data comparision may be helpful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of those who did not receive a card and had no expenditures: 1.00\n",
+      "Fraction of those who received a card and had no expenditures: 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "expenditures_cardholders = data.expenditure[y]\n",
+    "expenditures_noncardholders = data.expenditure[~y]\n",
+    "\n",
+    "print('Fraction of those who did not receive a card and had no expenditures: %.2f' \\\n",
+    "      %((expenditures_noncardholders == 0).mean()))\n",
+    "print('Fraction of those who received a card and had no expenditures: %.2f' \\\n",
+    "      %(( expenditures_cardholders == 0).mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown above, everyone who did not receive a card had no expenditures, while only 2% of those who received a card had no expenditures. It's not surprising that our model appeared to have a high accuracy. But this also seems to be a case of target leakage, where expenditures probably means expenditures on the card they applied for.\n",
+    "\n",
+    "Since `share` is partially determined by expenditure, it should be excluded too. The variables `active` and `majorcards` are a little less clear, but from the description, they sound concerning. In most situations, it's better to be safe than sorry if you can't track down the people who created the data to find out more.\n",
+    "\n",
+    "We would run a model without target leakage as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-val accuracy: 0.832\n"
+     ]
+    }
+   ],
+   "source": [
+    "potential_leaks = ['expenditure', 'share', 'active', 'majorcards']\n",
+    "X = X.drop(potential_leaks, axis=1)\n",
+    "\n",
+    "scores = cross_val_score(my_pipeline, X, y,\n",
+    "                        cv=5,\n",
+    "                        scoring=\"accuracy\")\n",
+    "\n",
+    "print(f\"Cross-val accuracy: {scores.mean():.3f}\" % scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This accuracy is quite a bit lower, which might be disappointing. However, we can expect it to be right about 80% of the time when used on new applications, whereas the leaky model would likely do much worse than that (in spite of its higher apparent score in cross-validation).\n",
+    "\n",
+    "Data leakage can be multi-million dollar mistake in many data science applications. Careful separation of training and validation data can prevent train-test contamination, and pipelines can help implement this separation. Likewise, a combination of caution, common sense, and data exploration can help identify target leakage.\n",
+    "\n",
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-data-leakage)\n",
+    "\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
