--- a/MahendraBishnoi/07_pubg_placement_prediction.ipynb
+++ b/MahendraBishnoi/07_pubg_placement_prediction.ipynb
@@ -946,7 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out.to_csv('submission.csv', )"
+    "out.to_csv('submission.csv', index=False)"
    ]
   }
  ],
