--- a/cs/coding/Code_Challenge.ipynb
+++ b/cs/coding/Code_Challenge.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "36f-BRRndv2o",
         "colab_type": "code",
-        "outputId": "6fa0756e-8ac1-4842-b6ed-4ae4804f55f4",
+        "outputId": "763fbc55-6c6a-4c8c-d903-4343515faa90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -82,12 +82,12 @@
         "        print(word)\n",
         "        break        "
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['kangaroo', 'abppple', 'apple', 'bale', 'able', 'ale']\n",
+            "['kangaroo', 'abppple', 'apple', 'able', 'bale', 'ale']\n",
             "abppple\n"
           ],
           "name": "stdout"
@@ -165,17 +165,41 @@
       "metadata": {
         "id": "rZcppl-mONaN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "74f3f18c-836b-4d95-9061-c25f5fc08c57"
       },
       "source": [
         "def string_splosion(str):\n",
         "  output = \"\"\n",
         "  for i in range(len(str)):\n",
         "    output += str[:i+1]\n",
-        "  return output"
+        "  return output\n",
+        "\n",
+        "print(\"string_splosion('Code') → 'CCoCodCode'\")    \n",
+        "print(f\"output: {string_splosion('Code')}\")\n",
+        "print(\"string_splosion('abc')  → 'aababc'\")    \n",
+        "print(f\"output: {string_splosion('abc')}\")\n",
+        "print(\"string_splosion('ab')  → 'aab'\")    \n",
+        "print(f\"output: {string_splosion('ab')}\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "string_splosion('Code') → 'CCoCodCode'\n",
+            "output: CCoCodCode\n",
+            "string_splosion('abc')  → 'aababc'\n",
+            "output: aababc\n",
+            "string_splosion('ab')  → 'aab'\n",
+            "output: aab\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -201,7 +225,7 @@
       "metadata": {
         "id": "q1wZK9W3POh7",
         "colab_type": "code",
-        "outputId": "7411d0cc-c794-4b6d-aabc-ad11c483f694",
+        "outputId": "8138ab91-655f-47b0-ebe4-521f7186342a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -237,7 +261,7 @@
         "print(f\"output: {maxSpan([1, 4, 2, 1, 4, 4, 4])}\")\n",
         "    "
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +301,7 @@
       "metadata": {
         "id": "eIZLEOJISqte",
         "colab_type": "code",
-        "outputId": "710a5e21-8d23-4352-9426-412c1208f3cd",
+        "outputId": "b843b86f-b573-469c-b61e-162cb6821151",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -318,7 +342,7 @@
         "print(f'output: {withoutString(\"Hello there\", \"x\")}')\n",
         "    "
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +382,7 @@
       "metadata": {
         "id": "EpmgdiV4aRg7",
         "colab_type": "code",
-        "outputId": "19037721-f370-4ad1-dc34-139c4fb15b7d",
+        "outputId": "2cee9fa3-a126-4a31-8f52-f562daa0c3d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -398,7 +422,7 @@
         "print(f'output: {sumNumbers(\"7 11\")}')\n",
         "            "
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +462,7 @@
       "metadata": {
         "id": "gx8zxYopezb3",
         "colab_type": "code",
-        "outputId": "11a28e7c-f1cb-43a4-9b97-a3203ff93c3a",
+        "outputId": "35dfd95a-154a-43df-dee7-879fcbf55e86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -470,7 +494,7 @@
         "print(f'output: {canBalance([10, 10])}')\n",
         "            "
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +629,7 @@
       "metadata": {
         "id": "yRYVl83RsWMq",
         "colab_type": "code",
-        "outputId": "1f3db0ed-ba40-40df-c444-3796de5d57fd",
+        "outputId": "530f4775-0213-4957-811a-944c5b8720c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -615,33 +639,20 @@
         "if __name__ == '__main__':\n",
         "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "...\n",
             "----------------------------------------------------------------------\n",
-            "Ran 3 tests in 0.006s\n",
+            "Ran 3 tests in 0.004s\n",
             "\n",
             "OK\n"
           ],
           "name": "stderr"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y1Wcxi1XispF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
